test/expected/large/searchindex/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: searchservice
    foo.com/duversion: 2.5.4-20190920.1568961240990
    foo.com/version: 2.5.4
  labels:
    app.kubernetes.io/name: searchservice
    helm.sh/chart: searchservice-2.5.4
  name: searchindex
spec:
  ports:
  - name: searchindex
    port: 80
    protocol: TCP
    targetPort: searchindex
  selector:
    app.kubernetes.io/name: searchservice
  type: ClusterIP
